flame/flame-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: flame
  name: flame
spec:
  ports:
    - name: "5005"
      port: 5005
      targetPort: 5005
  selector:
    io.kompose.service: flame
status:
  loadBalancer: {}
