flame/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
  labels:
    app: flame
spec:
  rules:
    - host: landing.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flame
                port:
                  number: 5005
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: ca-issuer
  labels:
    app: flame
spec:
  rules:
    - host: landing.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flame
                port:
                  number: 5005
  tls:
    - hosts:
        - landing.celestium.life
      secretName: landing-cert
